# filmcolor

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: USER_GUIDE.md  walkthrough.md
docs/superpowers/plans/: 2026-05-01-filmcolor-mvp.md  2026-05-02-filmcolor-polish.md  2026-05-02-interactive-correction.md  2026-05-02-negpy-experimental-engine.md  2026-05-02-ux-polish.md  2026-05-02-ux-round2.md
docs/superpowers/specs/: 2026-05-01-color-negative-conversion-design.md  2026-05-01-film-reversal-color-cast-design.md  2026-05-02-filmcolor-polish-design.md  2026-05-02-interactive-correction-design.md  2026-05-02-negpy-experimental-engine-design.md  2026-05-02-ux-polish-design.md  2026-05-02-ux-round2-design.md  2026-05-10-color-neg-pipeline-v2-design.md
src/filmcolor_core/: models.py  negpy_adapter.py  pipeline.py  raw.py  render.py  sidecar.py
src/filmcolor_server/: app.py  jobs.py  storage.py
tests/: conftest.py
tests/core/: test_negpy_adapter.py  test_pipeline.py  test_sidecar.py
tests/server/: test_api.py  test_storage.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
