[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filmcolor"
version = "0.1.0"
description = "Local color negative inversion and orange-mask correction workbench"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "numpy>=1.26",
  "pillow>=10.0",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "tifffile>=2024.0",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6"
]
raw = [
  "rawpy>=0.21"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]

[tool.ruff]
line-length = 100
target-version = "py312"
