[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filmcolor"
version = "0.1.0"
description = "Local color negative inversion and orange-mask correction workbench"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.115",
  "numpy>=1.26",
  "pillow>=10.0",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "tifffile>=2024.0",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6"
]
raw = [
  "rawpy>=0.21"
]
negpy = [
  "rawpy==0.25.1",
  "tifffile==2026.4.11",
  "imagecodecs==2026.3.6",
  "imageio==2.37.3",
  "jinja2==3.1.6",
  "llvmlite==0.44.0",
  "numba==0.61.2",
  "opencv-python-headless==4.13.0.92",
  "pyqt6==6.11.0",
  "pyqt6-charts==6.11.0",
  "qtawesome==1.4.2",
  "wgpu==0.31.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]

[tool.ruff]
line-length = 100
target-version = "py312"
